# Navigation

./: .gitignore  README.md
amo/: amo_inference.py  joint_filters.py
amo/tests/: test_joint_filters.py
docker/: Dockerfile.localization  Dockerfile.unitree  docker-compose.yml  run_amo.sh
docker/config/: amo_g1.yaml
docs/: AGENTIC_LLM_NAV.md  DLIO_DEPLOYMENT_TESTING.md  DLIO_G1_MID360_TUNING.md  DLIO_MAP_SAVE_LOAD.md  GROUND_REMOVAL_PLAN.md  LOCAL_VOXEL_MAP.md  dockerfiles.md  simulation_stack.md  system_architecture.md
ros2_ws/maps/: dlio_map.pcd
ros2_ws/src/g1_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/g1_bringup/launch/: dlio_debug.launch.py  fastlio_debug.launch.py  real_localization.launch.py  robot_model.launch.py
ros2_ws/src/g1_bringup/rviz/: g1_dlio.rviz  g1_fastlio.rviz
ros2_ws/src/g1_bringup/scripts/: run_dlio_debug.sh  run_fastlio_debug.sh
ros2_ws/src/g1_description/: CMakeLists.txt  package.xml
ros2_ws/src/g1_description/launch/: display.launch.py
ros2_ws/src/g1_description/rviz/: g1_display.rviz
ros2_ws/src/g1_description/urdf/: g1_29dof.urdf
ros2_ws/src/g1_local_map/: package.xml  setup.cfg  setup.py
ros2_ws/src/g1_local_map/config/: local_map.yaml
ros2_ws/src/g1_local_map/g1_local_map/: ground_segmentation.py  local_voxel_map_node.py
ros2_ws/src/g1_local_map/launch/: local_map.launch.py
ros2_ws/src/g1_local_map/test/: test_ground_segmentation.py
ros2_ws/src/g1_sim_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/g1_sim_bridge/config/: dlio_mid360_real.yaml  dlio_sim.yaml
ros2_ws/src/g1_sim_bridge/g1_sim_bridge/: isaac_dlio_qos_relay_node.py  isaac_livox_custom_adapter_node.py
ros2_ws/src/g1_sim_bridge/launch/: dlio.launch.py  sim_localization.launch.py
ros2_ws/src/g1_sim_bridge/resource/: g1_sim_bridge
ros2_ws/src/livox_ros_driver2/src/: lddc.cpp
sim/: README.md  g1_sim_scene.py  gen_mid360_config.py  launch_g1_sim.sh  verify_topics.sh
sim/lidar_configs/: Livox_Mid360.json
