<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_sim_bridge</name>
  <version>0.1.0</version>
  <description>
    Isaac Sim -> DLIO bridge (simulation only). A thin QoS relay that
    republishes the Isaac Sim MID-360 output (/livox/lidar PointCloud2 +
    /livox/imu_raw Imu, both BEST_EFFORT) as a RELIABLE /livox/lidar_reliable
    cloud and a RELIABLE /livox/imu so DLIO (direct_lidar_inertial_odometry)
    can consume them directly. Also ships the G1 DLIO configs (dlio_sim.yaml,
    dlio_mid360_real.yaml) and the sim localization launch. Not used on the
    real robot, where the Livox SDK driver publishes /livox/lidar + /livox/imu
    natively.
  </description>
  <maintainer email="lorenzo.ortolani@talosrobotics.ai">Lorenzo Ortolani</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>direct_lidar_inertial_odometry</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
</package>
